manifest/angular-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-ui
  labels:
    app: polar-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polar-ui
  template:
    metadata:
      labels:
        app: polar-ui
    spec:
      containers:
        - name: polar-ui
          image: ghcr.io/polarbookshop/polar-ui:v1
          ports:
            - containerPort: 9004
---
apiVersion: v1
kind: Service
metadata:
  name: polar-ui
spec:
  selector:
    app: polar-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9004
  type: ClusterIP
