manifest/config-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  labels:
    app: config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: ghcr.io/cynicdog/cloud-native-spring-jib-k8s-action/config-service:latest
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  labels:
    app: config-service
spec:
  type: ClusterIP
  selector:
    app: config-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
