manifest/edge-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "9000"
    spec:
      containers:
        - name: edge-service
          image: ghcr.io/cynicdog/cloud-native-spring-jib-k8s-action/edge-service:latest
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  type: ClusterIP
  selector:
    app: edge-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
