manifest/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polar-keycloak
  template:
    metadata:
      labels:
        app: polar-keycloak
    spec:
      containers:
        - name: polar-keycloak
          image: quay.io/keycloak/keycloak:19.0
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: init-script
              mountPath: /opt/keycloak-init
              subPath: init.sh
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "/opt/keycloak-init"]
      volumes:
        - name: init-script
          configMap:
            name: keycloak-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: polar-keycloak
spec:
  selector:
    app: polar-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
