manifest/postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-db
  labels:
    db: polar-db
spec:
  selector:
    matchLabels:
      db: polar-db
  template:
    metadata:
      labels:
        db: polar-db
    spec:
      containers:
        - name: polar-db
          image: postgres:latest
          resources:
            requests:
              cpu: 100m
              memory: 60Mi
            limits:
              cpu: 200m
              memory: 120Mi
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-config-volume
      volumes:
        - name: postgres-config-volume
          configMap:
            name: postgres-config
---
apiVersion: v1
kind: Service
metadata:
  name: polar-db
  labels:
    db: polar-db
spec:
  type: ClusterIP
  selector:
    db: polar-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
