manifest/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: polar-keycloak
spec:
  rules:
    - host: polar-keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polar-keycloak
                port:
                  number: 80
